--- a/src/client-app/src/components/RecipeList/RecipeList.css
+++ b/src/client-app/src/components/RecipeList/RecipeList.css
@@ -28,3 +28,8 @@
     text-align: center;
     margin-top: 12px;
   }
+  h1 {
+    margin-bottom: 0;
+    padding-top: 5px;
+  }
+}
